# cloud-study

./: README.md
PY-AI/Ai-Test/chatglm-6b/: finance_classify.py  req.txt  test01.py
PY-AI/Ai-Test/day01/: 02-创建线性和随机张量.py  05-张量转换为NumPy数组.py  10-乘法运算.py  11-张量的运算函数.py  12-多维索引.py  14-张量的reshapge方法.py  15-张量的索引计算.py  18-张量的view()方法.py  19-张量的拼接操作.py
PY-AI/Ai-Test/day02/: fstring.py  全连接神经网络.py  张量创建.py  抠图.py
PY-AI/Ai-Test/deepseek-chat/: chat.py  dianxin.py
PY-AI/Ai-Test/百度千帆/: Agents组件.py  Chain组件-demo2.py  Chain组件.py  Prompt组件-Zero-shot.py  Prompt组件-few- shot.py  ftest.py  百度千帆-ChatModel模型.py  百度千帆-Embedding模型.py  百度千帆-LLM模型.py
PY-AI/ai-day01/: 0-1张量.py  01-张量的创建.py  04-张量的类型转换.py  05-张量转换为NumPy数组.py  06-NumPy数组转换为张量.py  07-标量张量和数字转换.py  08-张量数值计算.py  09-张量的点乘运算.py  10-乘法运算.py  16-张量的squeeze()和unsqueeze()方法.py  17-张量的transpose和permute()函数.py  20-自动微分模块.py  21-线性回归实现流程.py  张量的类型转换.py  张量的索引计算.py  汉译英.py
PY-AI/ai-day01/testkoutu/: deal.py  start.py
ProcessEngineDemo-master/camunda/camunda-simple/: pom.xml
activiti7-demo/: pom.xml
c-project/: CMakeLists.txt  README.md  book  dyn_arr  echo  hiding  main.c  parta  test-strchr  嵌套结构
c-project/book.dSYM/Contents/Resources/DWARF/: book
c-project/book.dSYM/Contents/Resources/Relocations/aarch64/: book.yml
c-project/ch10/: designate.c  no_data.c  order.c  pnt_add.c  sum_arr1.c  sum_arr2.c  test_arrsize.c  test_const.c  zippo1.c
c-project/ch11/: getsputs.c  p_and_s.c  strptr.c  test.c
c-project/ch12/: dyn_arr.c  global.c  hiding.c  hiding.h  loc_stat.c  parta.c  partb.c  r_driver0.c  rand0.c  test_const.c  where.c
c-project/ch14/: book.c  manybook.c  test_getchar.c  嵌套结构.c
c-project/ch17/: films1.c
c-project/ch2/: first.c  two_func.c
c-project/ch3/: platinum.c
c-project/ch4/: praise2.c  skip.c  talkback.c  varwid.c
c-project/ch5/: pound.c  shoes1.c  squares.c  test-strchr.c
c-project/ch8/: echo.c  echo_eof.c
c-project/ch9/: lethead1.c  lethead2.c  swap1.c  swap3.c
c-project/dyn_arr.dSYM/Contents/: Info.plist
c-project/dyn_arr.dSYM/Contents/Resources/DWARF/: dyn_arr
c-project/dyn_arr.dSYM/Contents/Resources/Relocations/aarch64/: dyn_arr.yml
c-project/youxi1/: qiu.c  qiu.out
cadd-project/: .gitignore  CMakeLists.txt  main.cpp
cadd-project/tianqin/ch0/: zuoyi.cpp
cadd_project/: CMakeLists.txt  main.cpp
cadd_project/ch1/: helloword.cpp  shuchu.cpp  yuanzhu.cpp
cadd_project/ch2/: fortest.cpp  vectortest.cpp  xunhuan.cpp
cadd_project/ch3/: arraytest.cpp  referencetest.cpp  voidtest.cpp  zhizhen.cpp
cadd_project/ch4/: arrayzhizhen.cpp  neicun.cpp
cadd_project/day1/: helloword.cpp
cadd_project/hanshu/: hanshu1.cpp  hanshu2.cpp  hanshu3.cpp
cadd_project/yinyong/: swaptest.cpp  yinyong2test.cpp
cadd_project/yinyong/chat/: chat1.cpp
camunda/: pom.xml
camunda-pro/camunda/: pom.xml
camunda-pro/camunda-java/: pom.xml
camunda-pro/camunda-server_8004/: pom.xml  readme.md
camunda-pro/canal-demo/: pom.xml
clickhouse_study/: HELP.md  README.md  pom.xml
css3/: 边框.html
flink-demo/: pom.xml
flink-demo/src/logs/: error.log.2022-04-15  error.log.2022-07-14
flowable/flowable/: pom.xml
flowable/flowable-springboot/: pom.xml
flowable/flowbale-my-ui/: pom.xml
kafka/kafka-demo/: pom.xml
oauth/example-springboot-2.6.6/: pom.xml
oauth/example01/oauth2-client-example1/: pom.xml
oauth/example01/oauth2-server-example1/: pom.xml
oauth/oauth2-client/: pom.xml
oauth/oauth2-server/: pom.xml
oauth/simple/: READE.md
oauth/simple/oauth2-client/: pom.xml
oauth/simple/oauth2-server/: pom.xml
oauth/sql/: tab.sql
rabbitmq/: pom.xml
redis_study/demo1/: READE.md  pom.xml
sharding-jdbc/: pom.xml
sky-demo/: pom.xml
spring-thread-demo/: pom.xml
untitled/: CMakeLists.txt
untitled1/: CMakeLists.txt
web_code/es6/: package-lock.json  package.json
web_code/es6/src/: index.html  index.js  index3-2.js  index4-2.js  index5-1.js
web_code/html/: demo1.html
web_code/ts/2-3/: hello.js  hello.ts  index.html
web_code/ts/3-1/: demo.ts
web_code/ts/3-2/: demo.js  fha.ts
web_code/ts/3-6/: demo.ts
web_code/ts/3-7/: demo.js  demo.ts  index.html
web_code/ts/4-1/: demo.ts
web_code/ts/4-3/: demo.ts
web_code/ts/4-4/: demo.ts  index.html
web_code/ts/5-3/: tsconfig.json
web_code/ts/6-1/: demo.ts
web_code/ts/6-11/: demo.ts
web_code/vite/vite-project/: package-lock.json  package.json
web_code/vue-demo1/: package-lock.json
web_code/vue-demo1/1-3开发环境搭建/: index.html
web_code/vue-demo1/2-4 双向数据绑定/: index.html
web_code/vue-demo1/MVVM模型/: index.html
web_code/vue-demo1/ch7/: index.html
web_code/vue-demo1/vue的数据更新问题/: index.html
web_code/vue-demo1/vue的计算属性/: index.html
web_code/vue-demo1/事件绑定/: index.html
xxl-job/: pom.xml
(+263 files in other folders)
