cmake_minimum_required(VERSION 3.22)
project(c_project C)

set(CMAKE_C_STANDARD 99)

add_executable(c_project main.c )

add_executable(first ch2/first.c)
add_executable(two_func ch2/two_func.c)
add_executable(platinum ch3/platinum.c)
add_executable(talkback ch4/talkback.c)
add_executable(praise2 ch4/praise2.c)
add_executable(varwid ch4/varwid.c)
add_executable(skip ch4/skip.c)
add_executable(shoes1 ch5/shoes1.c)
add_executable(squares ch5/squares.c)
add_executable(pound ch5/pound.c)
add_executable(echo ch8/echo.c)
add_executable(echo_eof ch8/echo_eof.c)
add_executable(lethead1 ch9/lethead1.c)
add_executable(lethead2 ch9/lethead2.c)
add_executable(swap1 ch9/swap1.c)
add_executable(swap3 ch9/swap3.c)
add_executable(no_data ch10/no_data.c)
add_executable(test_arrsize ch10/test_arrsize.c)
add_executable(designate ch10/designate.c)
add_executable(pnt_add ch10/pnt_add.c)
add_executable(sum_arr1 ch10/sum_arr1.c)
add_executable(sum_arr2 ch10/sum_arr2.c)