cmake_minimum_required(VERSION 3.22)
project(c_project C)

set(CMAKE_C_STANDARD 99)

add_executable(c_project main.c )

add_executable(first ch2/first.c)
add_executable(two_func ch2/two_func.c)
add_executable(platinum ch3/platinum.c)
add_executable(talkback ch4/talkback.c)
add_executable(praise2 ch4/praise2.c)
add_executable(varwid ch4/varwid.c)
add_executable(skip ch4/skip.c)
add_executable(shoes1 ch5/shoes1.c)
add_executable(squares ch5/squares.c)
add_executable(pound ch5/pound.c)
add_executable(echo ch8/echo.c)
add_executable(echo_eof ch8/echo_eof.c)
add_executable(lethead1 ch9/lethead1.c)
add_executable(lethead2 ch9/lethead2.c)
add_executable(swap1 ch9/swap1.c)
add_executable(swap3 ch9/swap3.c)
add_executable(no_data ch10/no_data.c)
add_executable(test_arrsize ch10/test_arrsize.c)
add_executable(designate ch10/designate.c)
add_executable(pnt_add ch10/pnt_add.c)
add_executable(sum_arr1 ch10/sum_arr1.c)
add_executable(sum_arr2 ch10/sum_arr2.c)
add_executable(order ch10/order.c)
add_executable(test_const ch12/test_const.c)
add_executable(zippo1 ch10/zippo1.c)
add_executable(strptr ch11/strptr.c)
add_executable(p_and_s ch11/p_and_s.c)
add_executable(test ch11/test.c)
add_executable(getsputs ch11/getsputs.c)
add_executable(loc_stat ch12/loc_stat.c)
add_executable(global ch12/global.c)
#两个文件同时编译
add_executable(parta ch12/parta.c  ch12/partb.c)
add_executable(rand0 ch12/rand0.c)
add_executable(dyn_arr ch12/dyn_arr.c)
add_executable(where ch12/where.c)

add_executable(book ch14/book.c)
add_executable(manybook ch14/manybook.c)
add_executable(test_getchar ch14/test_getchar.c)
add_executable(qiu youxi1/qiu.c)