cmake_minimum_required(VERSION 3.22)
project(cadd_project)

set(CMAKE_CXX_STANDARD 17)

add_executable(main main.cpp)
add_executable(helloword ch1/helloword.cpp)
add_executable(yuanzhu ch1/yuanzhu.cpp)
add_executable(shuchu ch1/shuchu.cpp)
add_executable(xunhuan ch2/xunhuan.cpp)
add_executable(fortest ch2/fortest.cpp)
add_executable(vectortest ch2/vectortest.cpp)
add_executable(zhizhen ch3/zhizhen.cpp)
add_executable(voidtest ch3/voidtest.cpp)
add_executable(referencetest ch3/referencetest.cpp)
add_executable(arraytest ch3/arraytest.cpp)
add_executable(neicun ch4/neicun.cpp)
add_executable(arrayzhizhen ch4/arrayzhizhen.cpp)
add_executable(game_princess youxi/game_princess.cpp)